dashboard card height alignment fixed

--- a/src/components/common/Common.css
+++ b/src/components/common/Common.css
@@ -29,11 +29,11 @@
   font-weight: 700 !important;
   background-color: #fff !important;
 }
-.hstack{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.hstack {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 .p-2 {
   padding: 0.5rem !important;
@@ -54,13 +54,14 @@
   margin-left: auto !important;
   line-height: 1px;
 }
-.img-size{
+.img-size {
   width: 30px;
 }
 
-.tclr{
-color:black !important;
-font-weight: 400;
+.tclr {
+  color: black !important;
+  font-weight: 400;
+  min-height: 40px !important;
 }
 
 @media screen and (max-width: 768px) {
